--- a/styles.css
+++ b/styles.css
@@ -206,6 +206,7 @@ align-items:center;
   list-style: none;
   display:flex;
   justify-content: flex-end;
+  margin-right:50px;
 }
 
 .icons svg{
@@ -264,6 +265,10 @@ align-items:center;
     height:auto;
     display:block;
     margin: 0 auto 50px;
+  }
+
+  .copy .btn{
+    margin:10px 0px 0;
   }
 }
 
