--- a/styles.css
+++ b/styles.css
@@ -202,11 +202,14 @@ align-items:center;
   margin:0 0 40px;
 }
 
+footer{
+  margin-right:30px;
+}
+
 .icons {
   list-style: none;
   display:flex;
   justify-content: flex-end;
-  margin-right:50px;
 }
 
 .icons svg{
