--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ h1, h2, h3, h4, h5, h6{
 
 h2{
   font-size: 2em;
+  color:black;
 }
 
 h3{
@@ -33,14 +34,14 @@ h4 {
   line-height: 1.8;
 }
 
-main a{
+main .btn{
   transition: all 0.3s ease 0s;
   font-weight: 700;
   letter-spacing: 1px;
   color: rgb(47, 130, 212);
 }
 
-main a:hover {
+main .btn:hover {
   color: #3d5473;
   text-decoration: none;
 }
@@ -203,7 +204,8 @@ align-items:center;
 }
 
 footer{
-  margin-right:30px;
+  margin:60px 30px 60px 0;
+  
 }
 
 .icons {
