--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ a:visited {
   text-decoration: none;
 }
 
-body .head-pic {
+body img {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
